모바일 메인페이지 디비 연동

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -16,6 +16,12 @@
            prevEl: ".swiper-button-prev",
          },
        });
+       var swiper2 = new Swiper(".mb_swiper", {
+         navigation: {
+           nextEl: ".swiper-button-next",
+           prevEl: ".swiper-button-prev",
+         },
+       });
       }
     </script>
     <style>
