카트까지 연동

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -22,6 +22,20 @@
            prevEl: ".swiper-button-prev",
          },
        });
+       var swiper3 = new Swiper(".pc_gsInfo_swiper", {
+         navigation: {
+           nextEl: ".swiper-button-next",
+           prevEl: ".swiper-button-prev",
+         },
+       });
+       var swiper4 = new Swiper(".mb_gsInfo_swiper", {
+         navigation: {
+           nextEl: ".swiper-button-next",
+           prevEl: ".swiper-button-prev",
+         },
+       });
+       
+       
       }
     </script>
     <style>
